--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-quarkus.devservices.enabled=false
+quarkus.devservices.enabled=true
 # \u6570\u636E\u5E93\u914D\u7F6E
 quarkus.datasource.db-kind=h2
+quarkus.datasource.db-version=2.3.230
 quarkus.datasource.username=sa
 quarkus.datasource.password=
 quarkus.datasource.jdbc.url=jdbc:h2:file:~/h2_test/auto_animation
@@ -8,5 +9,6 @@ quarkus.datasource.jdbc.driver=org.h2.Driver
 quarkus.datasource.jdbc.max-size=16
 
 # hibernate \u914D\u7F6E
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=import.sql
