build: 添加 liquibase 组件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,7 @@ quarkus.datasource.jdbc.max-size=16
 # hibernate \u914D\u7F6E
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.sql-load-script=import.sql
+
+# liquibase \u914D\u7F6E
+quarkus.liquibase.migrate-at-start=true
+quarkus.liquibase.change-log=db/changelog-root.xml
