feat: 添加 HTTP CORS 配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ quarkus.hibernate-orm.log.sql=true
 # liquibase \u914D\u7F6E
 quarkus.liquibase.migrate-at-start=true
 quarkus.liquibase.change-log=db/changelog-root.xml
+
+# cors \u914D\u7F6E
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE
+
