feat: 启用打印 SQL 参数绑定

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ quarkus.datasource.jdbc.max-size=16
 # hibernate \u914D\u7F6E
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.bind-parameters=true
 
 # liquibase \u914D\u7F6E
 quarkus.liquibase.migrate-at-start=true
