--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <querydsl.version>5.1.0</querydsl.version>
         <lombok.version>1.18.30</lombok.version>
         <jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
+        <hypersistence-utils.version>3.9.0</hypersistence-utils.version>
     </properties>
 
     <dependencyManagement>
@@ -69,6 +70,12 @@
             <version>${querydsl.version}</version>
             <classifier>jakarta</classifier>
         </dependency>
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-63</artifactId>
+            <version>${hypersistence-utils.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.querydsl</groupId>
