--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,8 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.http.cors.methods=GET,POST,PUT,DELETE
 
+# rest client \u914D\u7F6E
+quarkus.rest-client.bangumi-api.uri=https://api.bgm.tv
+quarkus.rest-client.bangumi-api.scope=jakarta.inject.Singleton
+
 quarkus.log.level=DEBUG
